@@ -20,7 +20,9 @@ package de.tuclausthal.submissioninterface;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertIterableEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
@@ -35,7 +37,6 @@ import java.util.List;
 import java.util.Random;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
@@ -56,6 +57,7 @@ import org.htmlunit.html.HtmlForm;
 import org.htmlunit.html.HtmlLabel;
 import org.htmlunit.html.HtmlPage;
 import org.htmlunit.html.HtmlPasswordInput;
+import org.htmlunit.html.HtmlSelect;
 import org.htmlunit.html.HtmlSubmitInput;
 import org.htmlunit.html.HtmlTable;
 import org.htmlunit.html.HtmlTableRow;
@@ -68,10 +70,13 @@ import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
+import org.junit.jupiter.params.provider.ValueSource;
 
 import de.tuclausthal.submissioninterface.persistence.dao.DAOFactory;
+import de.tuclausthal.submissioninterface.persistence.datamodel.Group;
 import de.tuclausthal.submissioninterface.persistence.datamodel.Lecture;
 import de.tuclausthal.submissioninterface.persistence.datamodel.Participation;
+import de.tuclausthal.submissioninterface.persistence.datamodel.Submission;
 import de.tuclausthal.submissioninterface.persistence.datamodel.Task;
 import de.tuclausthal.submissioninterface.persistence.datamodel.TestCount;
 import de.tuclausthal.submissioninterface.persistence.datamodel.TestCount_;
@@ -144,9 +149,11 @@ class WebClientTest {
 
 			@AfterEach
 			void resetSubscribe() {
+				session.clear();
 				session.beginTransaction();
-				session.refresh(lecture);
+				lecture = session.merge(lecture);
 				lecture.setSemester(oldSemester);
+				participation = session.merge(participation);
 				DAOFactory.SubmissionDAOIf(session).getAllSubmissions(participation).forEach(s -> session.remove(s));
 				DAOFactory.ParticipationDAOIf(session).deleteParticipation(participation);
 				session.getTransaction().commit();
@@ -185,6 +192,9 @@ class WebClientTest {
 				fileInput.setValue("TriangleOutput.java");
 				final String fileContents = Util.loadFile(Path.of("src/test/resources", filename)).toString();
 				fileInput.setData(fileContents.getBytes());
+				assertThrows(ElementNotFoundException.class, () -> {
+					submitForm.getSelectByName("partnerid");
+				});
 				final HtmlPage submittedPage = submitForm.getOneHtmlElementByAttribute("input", "type", "submit").click();
 				final String pageContent = submittedPage.asNormalizedText();
 				assertTrue(pageContent.contains("TriangleOutput.java"), "TriangleOutput.java");
@@ -211,6 +221,70 @@ class WebClientTest {
 				assertTrue(deleteConfirm.asNormalizedText().contains("Datei \"" + remoteFilename + "\" löschen"), "Datei \"" + remoteFilename + "\" löschen");
 				final HtmlPage afterDelete = deleteConfirm.getForms().get(0).getOneHtmlElementByAttribute("input", "type", "submit").click();
 				assertTrue(afterDelete.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+				assertNull(DAOFactory.SubmissionDAOIf(session).getSubmission(DAOFactory.TaskDAOIf(session).getTask(4), participation.getUser()));
+			}
+
+			@Test
+			void uploadFileExtensionNormalization(@TempDir final Path tmp) throws Exception {
+				final HtmlPage taskPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/ShowTask?taskid=4");
+				assertEquals("GATE: Aufgabe \"Something\"", taskPage.getTitleText());
+				assertTrue(taskPage.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+
+				final HtmlPage submitPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/SubmitSolution?taskid=4");
+				final HtmlForm submitForm = submitPage.getForms().get(0);
+				final HtmlFileInput fileInput = submitForm.getInputByName("file");
+				fileInput.setValue("TriangleOutput.JaVa");
+				final String fileContents = Util.loadFile(Path.of("src/test/resources/TriangleOutput.java")).toString();
+				fileInput.setData(fileContents.getBytes());
+				final HtmlPage submittedPage = submitForm.getOneHtmlElementByAttribute("input", "type", "submit").click();
+				final String pageContent = submittedPage.asNormalizedText();
+				assertTrue(pageContent.contains("TriangleOutput.java"), "TriangleOutput.java");
+				assertTrue(pageContent.contains("Abgabe bearbeiten/erweitern"), "Abgabe bearbeiten/erweitern");
+				assertEquals(1, DAOFactory.SubmissionDAOIf(session).getSubmission(DAOFactory.TaskDAOIf(session).getTask(4), participation.getUser()).getSubmitters().size());
+
+				// retrieve file
+				final HtmlAnchor viewFileLink = submittedPage.getFirstByXPath("//a[text()='TriangleOutput.java']");
+				final HtmlPage uploadedFile = viewFileLink.click();
+				assertEquals(fileContents.trim(), uploadedFile.getElementById("fileContents").getTextContent().trim());
+
+				// download file
+				final UnexpectedPage downloadFilePage = webClient.getPage(uploadedFile.getUrl().toString() + "&download=true");
+				final Path tmpFile = tmp.resolve("tmpfile");
+				try (InputStream is = downloadFilePage.getInputStream()) {
+					Util.copyInputStreamAndClose(is, tmpFile);
+				}
+				assertEquals(fileContents, Util.loadFile(tmpFile).toString());
+
+				// delete file
+				final HtmlAnchor deleteLink = submittedPage.getFirstByXPath("//a[text()='löschen']");
+				final HtmlPage deleteConfirm = deleteLink.click();
+				assertEquals("GATE: Datei löschen", deleteConfirm.getTitleText());
+				assertTrue(deleteConfirm.asNormalizedText().contains("Datei \"TriangleOutput.java\" löschen"), "Datei \"TriangleOutput.java\" löschen");
+				final HtmlPage afterDelete = deleteConfirm.getForms().get(0).getOneHtmlElementByAttribute("input", "type", "submit").click();
+				assertTrue(afterDelete.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+			}
+
+			@ParameterizedTest
+			@ValueSource(strings = { "some.java", "Some .java", "Something.java.somethingelse", "Something.somethingelse.java", "Filename.pdf", "Invalid:Name", "Another<Invalid" })
+			void uploadFileInvalidName(final String filename) throws Exception {
+				final HtmlPage taskPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/ShowTask?taskid=4");
+				assertEquals("GATE: Aufgabe \"Something\"", taskPage.getTitleText());
+				assertTrue(taskPage.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+
+				final HtmlPage submitPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/SubmitSolution?taskid=4");
+				final HtmlForm submitForm = submitPage.getForms().get(0);
+				final HtmlFileInput fileInput = submitForm.getInputByName("file");
+				fileInput.setValue(filename);
+				fileInput.setData("Something".getBytes());
+				final HtmlPage submittedPage = submitForm.getOneHtmlElementByAttribute("input", "type", "submit").click();
+				final String pageContent = submittedPage.asNormalizedText();
+				assertTrue(pageContent.contains("Nicht alle Dateien wurden verarbeitet."), "Nicht alle Dateien wurden verarbeitet.");
+				assertTrue(pageContent.contains(filename), filename);
+				assertNull(DAOFactory.SubmissionDAOIf(session).getSubmission(DAOFactory.TaskDAOIf(session).getTask(4), participation.getUser()));
+
+				final HtmlPage taskPage2 = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/ShowTask?taskid=4");
+				assertEquals("GATE: Aufgabe \"Something\"", taskPage2.getTitleText());
+				assertTrue(taskPage2.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
 			}
 
 			@Nested
@@ -226,8 +300,9 @@ class WebClientTest {
 
 				@AfterEach
 				void reset() {
+					session.clear();
 					session.beginTransaction();
-					session.refresh(task);
+					task = session.merge(task);
 					task.setDeadline(oldDeadline);
 					{
 						CriteriaBuilder builder = session.getCriteriaBuilder();
@@ -309,8 +384,9 @@ class WebClientTest {
 
 				@AfterEach
 				void reset() {
+					session.clear();
 					session.beginTransaction();
-					session.refresh(task);
+					session.merge(task);
 					task.setDeadline(oldDeadline);
 					session.getTransaction().commit();
 				}
@@ -424,8 +500,9 @@ class WebClientTest {
 
 				@AfterEach
 				void reset() {
+					session.clear();
 					session.beginTransaction();
-					session.refresh(task);
+					task = session.merge(task);
 					task.setDeadline(oldDeadline);
 					{
 						CriteriaBuilder builder = session.getCriteriaBuilder();
@@ -510,7 +587,7 @@ class WebClientTest {
 			}
 
 			@Nested
-			class Task4FileUploadTimeChecks extends BasicTest {
+			class Task4FileUploadTimeChecks {
 				private Task task;
 				private ZonedDateTime oldDeadline;
 
@@ -545,6 +622,200 @@ class WebClientTest {
 					final HtmlPage submittedPage = submitForm.getOneHtmlElementByAttribute("input", "type", "submit").click();
 					final String pageContent = submittedPage.asNormalizedText();
 					assertTrue(pageContent.contains("Abgabe nicht mehr möglich."), "Abgabe nicht mehr möglich.");
+				}
+			}
+
+			@Nested
+			class Task4PartnerUploads {
+				private Task task;
+
+				@BeforeEach
+				void EnablePartnerSubmissions() {
+					task = DAOFactory.TaskDAOIf(session).getTask(4);
+					session.beginTransaction();
+					task.setMaxSubmitters(2);
+					participation.setGroup(DAOFactory.GroupDAOIf(session).getGroup(1));
+					session.getTransaction().commit();
+				}
+
+				@AfterEach
+				void ResetPartnerSubmissions() {
+					session.beginTransaction();
+					session.refresh(task);
+					task.setMaxSubmitters(1);
+					final Submission cleanup = DAOFactory.SubmissionDAOIf(session).getSubmission(task, DAOFactory.UserDAOIf(session).getUserByUsername("user2"));
+					if (cleanup != null) {
+						session.remove(cleanup);
+					}
+					session.getTransaction().commit();
+				}
+
+				@Test
+				void submitFileWithNoPartner() throws Exception {
+					final HtmlPage taskPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/ShowTask?taskid=4");
+					assertEquals("GATE: Aufgabe \"Something\"", taskPage.getTitleText());
+					assertTrue(taskPage.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+
+					final HtmlPage submitPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/SubmitSolution?taskid=4");
+					final HtmlForm submitForm = submitPage.getForms().get(0);
+					final HtmlFileInput fileInput = submitForm.getInputByName("file");
+					fileInput.setValue("TriangleOutput.java");
+					fileInput.setData("Something".getBytes());
+					final HtmlPage submittedPage = submitForm.getOneHtmlElementByAttribute("input", "type", "submit").click();
+					final String pageContent = submittedPage.asNormalizedText();
+					assertTrue(pageContent.contains("TriangleOutput.java"), "TriangleOutput.java");
+					assertTrue(pageContent.contains("Abgabe bearbeiten/erweitern"), "Abgabe bearbeiten/erweitern");
+					assertEquals(1, DAOFactory.SubmissionDAOIf(session).getSubmission(task, participation.getUser()).getSubmitters().size());
+
+					// delete file
+					final HtmlAnchor deleteLink = submittedPage.getFirstByXPath("//a[text()='löschen']");
+					final HtmlPage deleteConfirm = deleteLink.click();
+					assertEquals("GATE: Datei löschen", deleteConfirm.getTitleText());
+					assertTrue(deleteConfirm.asNormalizedText().contains("Datei \"TriangleOutput.java\" löschen"), "Datei \"TriangleOutput.java\" löschen");
+					final HtmlPage afterDelete = deleteConfirm.getForms().get(0).getOneHtmlElementByAttribute("input", "type", "submit").click();
+					assertTrue(afterDelete.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+					assertNull(DAOFactory.SubmissionDAOIf(session).getSubmission(task, participation.getUser()));
+				}
+
+				@Test
+				void submitFileWithPartner() throws Exception {
+					final HtmlPage taskPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/ShowTask?taskid=4");
+					assertEquals("GATE: Aufgabe \"Something\"", taskPage.getTitleText());
+					assertTrue(taskPage.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+
+					assertNull(DAOFactory.SubmissionDAOIf(session).getSubmission(task, DAOFactory.UserDAOIf(session).getUserByUsername("user2")));
+
+					final HtmlPage submitPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/SubmitSolution?taskid=4");
+					final HtmlForm submitForm = submitPage.getForms().get(0);
+					final HtmlFileInput fileInput = submitForm.getInputByName("file");
+					fileInput.setValue("TriangleOutput.java");
+					fileInput.setData("Something".getBytes());
+					final HtmlSelect partner = submitForm.getSelectByName("partnerid");
+					assertIterableEquals(List.of("0", "19", "4", "6"), partner.getOptions().stream().map(o -> o.getValueAttribute()).sorted().toList());
+					partner.setSelectedAttribute("6", true);
+					final HtmlPage submittedPage = submitForm.getOneHtmlElementByAttribute("input", "type", "submit").click();
+					final String pageContent = submittedPage.asNormalizedText();
+					assertTrue(pageContent.contains("TriangleOutput.java"), "TriangleOutput.java");
+					assertTrue(pageContent.contains("Abgabe bearbeiten/erweitern"), "Abgabe bearbeiten/erweitern");
+					assertEquals(2, DAOFactory.SubmissionDAOIf(session).getSubmission(task, participation.getUser()).getSubmitters().size());
+					assertSame(DAOFactory.SubmissionDAOIf(session).getSubmission(task, participation.getUser()), DAOFactory.SubmissionDAOIf(session).getSubmission(task, DAOFactory.UserDAOIf(session).getUserByUsername("user2")));
+
+					// delete file
+					final HtmlAnchor deleteLink = submittedPage.getFirstByXPath("//a[text()='löschen']");
+					final HtmlPage deleteConfirm = deleteLink.click();
+					assertEquals("GATE: Datei löschen", deleteConfirm.getTitleText());
+					assertTrue(deleteConfirm.asNormalizedText().contains("Datei \"TriangleOutput.java\" löschen"), "Datei \"TriangleOutput.java\" löschen");
+					final HtmlPage afterDelete = deleteConfirm.getForms().get(0).getOneHtmlElementByAttribute("input", "type", "submit").click();
+					assertTrue(afterDelete.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+					assertNull(DAOFactory.SubmissionDAOIf(session).getSubmission(task, participation.getUser()));
+					assertNull(DAOFactory.SubmissionDAOIf(session).getSubmission(task, DAOFactory.UserDAOIf(session).getUserByUsername("user2")));
+				}
+
+				@ParameterizedTest
+				@ValueSource(strings = { "502" /* does not exist */, "17" /* no group */, "8" /* different lecture */, "6" /* we will create a contradicting submission */, "self" /* self */ })
+				void submitFileWithInvalidPartner(String partnerId) throws Exception {
+					final HtmlPage taskPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/ShowTask?taskid=4");
+					assertEquals("GATE: Aufgabe \"Something\"", taskPage.getTitleText());
+					assertTrue(taskPage.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+
+					assertNull(DAOFactory.SubmissionDAOIf(session).getSubmission(task, DAOFactory.UserDAOIf(session).getUserByUsername("user2")));
+
+					final HtmlPage submitPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/SubmitSolution?taskid=4");
+					final HtmlForm submitForm = submitPage.getForms().get(0);
+					final HtmlFileInput fileInput = submitForm.getInputByName("file");
+					fileInput.setValue("TriangleOutput.java");
+					fileInput.setData("Something".getBytes());
+					final HtmlSelect partner = submitForm.getSelectByName("partnerid");
+					if ("self".equals(partnerId)) {
+						partnerId = String.valueOf(participation.getId());
+					} else if ("6".equals(partnerId)) {
+						session.beginTransaction();
+						DAOFactory.SubmissionDAOIf(session).createSubmission(task, DAOFactory.ParticipationDAOIf(session).getParticipation(6));
+						session.getTransaction().commit();
+					}
+					partner.getOption(1).setValueAttribute(partnerId);
+					partner.setSelectedAttribute(partnerId, true);
+					final HtmlPage submittedPage = submitForm.getOneHtmlElementByAttribute("input", "type", "submit").click();
+					final String pageContent = submittedPage.asNormalizedText();
+					assertTrue(pageContent.contains("Ein ausgewählter Studierender hat bereits eine eigene Abgabe initiiert"), "Ein ausgewählter Studierender hat bereits eine eigene Abgabe initiiert");
+					assertNull(DAOFactory.SubmissionDAOIf(session).getSubmission(task, participation.getUser()));
+				}
+
+				@Nested
+				class PartnerGroup {
+					private Group group;
+
+					@BeforeEach
+					void EnablePartnerSubmissions() {
+						group = DAOFactory.GroupDAOIf(session).getGroup(1);
+						session.beginTransaction();
+						group.setSubmissionGroup(true);
+						session.getTransaction().commit();
+					}
+
+					@AfterEach
+					void ResetPartnerSubmissions() {
+						session.beginTransaction();
+						session.refresh(group);
+						group.setSubmissionGroup(false);
+						session.getTransaction().commit();
+					}
+
+					@Test
+					void submitFile() throws Exception {
+						final HtmlPage taskPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/ShowTask?taskid=4");
+						assertEquals("GATE: Aufgabe \"Something\"", taskPage.getTitleText());
+						assertTrue(taskPage.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+
+						final HtmlPage submitPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/SubmitSolution?taskid=4");
+						final HtmlForm submitForm = submitPage.getForms().get(0);
+						final HtmlFileInput fileInput = submitForm.getInputByName("file");
+						fileInput.setValue("TriangleOutput.java");
+						fileInput.setData("Something".getBytes());
+						assertThrows(ElementNotFoundException.class, () -> {
+							submitForm.getSelectByName("partnerid");
+						});
+						final HtmlPage submittedPage = submitForm.getOneHtmlElementByAttribute("input", "type", "submit").click();
+						final String pageContent = submittedPage.asNormalizedText();
+						assertTrue(pageContent.contains("TriangleOutput.java"), "TriangleOutput.java");
+						assertTrue(pageContent.contains("Abgabe bearbeiten/erweitern"), "Abgabe bearbeiten/erweitern");
+						assertEquals(group.getMembers().size(), DAOFactory.SubmissionDAOIf(session).getSubmission(task, participation.getUser()).getSubmitters().size());
+
+						// delete file
+						final HtmlAnchor deleteLink = submittedPage.getFirstByXPath("//a[text()='löschen']");
+						final HtmlPage deleteConfirm = deleteLink.click();
+						assertEquals("GATE: Datei löschen", deleteConfirm.getTitleText());
+						assertTrue(deleteConfirm.asNormalizedText().contains("Datei \"TriangleOutput.java\" löschen"), "Datei \"TriangleOutput.java\" löschen");
+						final HtmlPage afterDelete = deleteConfirm.getForms().get(0).getOneHtmlElementByAttribute("input", "type", "submit").click();
+						assertTrue(afterDelete.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+						assertNull(DAOFactory.SubmissionDAOIf(session).getSubmission(task, participation.getUser()));
+					}
+
+					@Test
+					void groupSubmissionAlreadyExists() throws Exception {
+						assertNull(DAOFactory.SubmissionDAOIf(session).getSubmission(task, DAOFactory.UserDAOIf(session).getUserByUsername("user2")));
+						session.beginTransaction();
+						DAOFactory.SubmissionDAOIf(session).createSubmission(task, DAOFactory.ParticipationDAOIf(session).getParticipation(6));
+						session.getTransaction().commit();
+
+						final HtmlPage taskPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/ShowTask?taskid=4");
+						assertEquals("GATE: Aufgabe \"Something\"", taskPage.getTitleText());
+						assertTrue(taskPage.asNormalizedText().contains("Abgabe starten"), "Abgabe starten");
+
+						final HtmlPage submitPage = webClient.getPage(WEBROOT + "/SubmissionInterface/servlets/SubmitSolution?taskid=4");
+						final HtmlForm submitForm = submitPage.getForms().get(0);
+						final HtmlFileInput fileInput = submitForm.getInputByName("file");
+						fileInput.setValue("TriangleOutput.java");
+						final String fileContents = Util.loadFile(Path.of("src/test/resources/TriangleOutput.java")).toString();
+						fileInput.setData(fileContents.getBytes());
+						assertThrows(ElementNotFoundException.class, () -> {
+							submitForm.getSelectByName("partnerid");
+						});
+						final HtmlPage submittedPage = submitForm.getOneHtmlElementByAttribute("input", "type", "submit").click();
+						final String pageContent = submittedPage.asNormalizedText();
+						assertTrue(pageContent.contains("Es wurde bereits eine Gruppen-Abgabe initiiert."), "Es wurde bereits eine Gruppen-Abgabe initiiert.");
+						assertNull(DAOFactory.SubmissionDAOIf(session).getSubmission(task, participation.getUser()));
+					}
 				}
 			}
 		}
@@ -794,14 +1065,14 @@ class WebClientTest {
 				assertEquals(8, rows.size());
 
 				int i = 0;
-				assertEquals(List.of("Ägyptologie und Koptologie (Promotion)", "Lastname1", "Firstname1", "1", "(2)", "1,5", "k.A.", "2,5"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
-				assertEquals(List.of("n/a", "Lastname2", "Firstname2", "1", "(2)", "1,5", "k.A.", "2,5"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
-				assertEquals(List.of("n/a", "Lastname3", "Firstname3", "n.b.", "k.A.", "n.b.", "k.A.", "0"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
-				assertEquals(List.of("n/a", "Lastname4", "Firstname4", "n.b.", "k.A.", "n.b.", "k.A.", "0"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
-				assertEquals(List.of("", "Lastname5", "Firstname5", "k.A.", "1", "k.A.", "k.A.", "1"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
-				assertEquals(List.of("n/a", "Lastname6", "Firstname6", "1,5", "(2)", "(0)", "k.A.", "1,5"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
-				assertEquals(List.of("n/a", "Lastname7", "Firstname7", "n.b.", "(2)", "0", "k.A.", "0"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
-				assertEquals(List.of("n/a", "Lastname8", "Firstname8", "k.A.", "(2)", "k.A.", "k.A.", "0"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
+				assertEquals(List.of("Ägyptologie und Koptologie (Promotion)", "Lastname1", "Firstname1", "1", "(2)", "1,5", "k.A.", "2,5"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
+				assertEquals(List.of("n/a", "Lastname2", "Firstname2", "1", "(2)", "1,5", "k.A.", "2,5"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
+				assertEquals(List.of("n/a", "Lastname3", "Firstname3", "n.b.", "k.A.", "n.b.", "k.A.", "0"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
+				assertEquals(List.of("n/a", "Lastname4", "Firstname4", "n.b.", "k.A.", "n.b.", "k.A.", "0"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
+				assertEquals(List.of("", "Lastname5", "Firstname5", "k.A.", "1", "k.A.", "k.A.", "1"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
+				assertEquals(List.of("n/a", "Lastname6", "Firstname6", "1,5", "(2)", "(0)", "k.A.", "1,5"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
+				assertEquals(List.of("n/a", "Lastname7", "Firstname7", "n.b.", "(2)", "0", "k.A.", "0"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
+				assertEquals(List.of("n/a", "Lastname8", "Firstname8", "k.A.", "(2)", "k.A.", "k.A.", "0"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
 			}
 
 			@Test
@@ -822,9 +1093,9 @@ class WebClientTest {
 				assertEquals(3, rows.size());
 
 				int i = 0;
-				assertEquals(List.of("Abgabe von", "Bemerkungen", "Punkte", "OK?"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
-				assertEquals(List.of("Lastname6, Firstname6", "ne, so nicht", "0", ""), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
-				assertEquals(List.of("Lastname7, Firstname7", "falsch und abnahme nicht bestanden", "0", "ok"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
+				assertEquals(List.of("Abgabe von", "Bemerkungen", "Punkte", "OK?"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
+				assertEquals(List.of("Lastname6, Firstname6", "ne, so nicht", "0", ""), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
+				assertEquals(List.of("Lastname7, Firstname7", "falsch und abnahme nicht bestanden", "0", "ok"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
 			}
 
 			@Test
@@ -836,8 +1107,8 @@ class WebClientTest {
 				assertEquals(2, rows.size());
 
 				int i = 0;
-				assertEquals(List.of("Abgabe von", "Bemerkungen", "Punkte", "OK?"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
-				assertEquals(List.of("Lastname1, Firstname1; Lastname2, Firstname2", "jetzt final", "1,5", "ok"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
+				assertEquals(List.of("Abgabe von", "Bemerkungen", "Punkte", "OK?"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
+				assertEquals(List.of("Lastname1, Firstname1; Lastname2, Firstname2", "jetzt final", "1,5", "ok"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
 			}
 
 			@Test
@@ -849,8 +1120,8 @@ class WebClientTest {
 				assertEquals(2, rows.size());
 
 				int i = 0;
-				assertEquals(List.of("Abgabe von", "Bemerkungen", "Punkte", "OK?"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
-				assertEquals(List.of("Lastname3, Firstname3; Lastname4, Firstname4", "", "n/a", ""), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).collect(Collectors.toList()));
+				assertEquals(List.of("Abgabe von", "Bemerkungen", "Punkte", "OK?"), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
+				assertEquals(List.of("Lastname3, Firstname3; Lastname4, Firstname4", "", "n/a", ""), rows.get(i++).getCells().stream().map(c -> c.asNormalizedText()).toList());
 			}
 		}
 
